# RaylibMatrixDesktop

./: .gitignore  CMakeLists.txt  Info.plist.in  README.md  build.bat  build.sh
RaylibDesktopDemo/: Main.cpp  RaylibDesktopDemo.vcxproj  RaylibDesktopDemo.vcxproj.filters  hsl_rgb.h
assets/: bloom.fs
src/: asset_loader.cpp  asset_loader.h  hsl_rgb.h  main.cpp  matrix_rain.cpp  matrix_rain.h  prevMain.cpp
src/platform/: desktop_integration.h
src/platform/linux/: desktop_integration_linux.cpp
src/platform/macos/: desktop_integration_macos.mm
src/platform/windows/: desktop_integration_windows.cpp
